Feat: Adds Storybook, initial Shadcn/ui components, basic configuration (#3)
* Adds Storybook and basic configuration

* Adds in Shadcn/ui and necessary scaffolding.

* Adds in scaffolding for Shadcn and Storybook, tests Button import in Portal

* Cleans up testing with the shad button

* Adds in avatar, badge, dropdown-menu, inpux, label, separator, and tooltip from Shadcn/ui (to the 1ui package)

* Scaffolds for basic Storybook with Shadcn/ui

* Types are now being properly exported -- still troubleshooting styles

* Modified the Button component for missing tokens -- test now works

* Fixes Storybook config -- the button file still is using missing tokens from the theme so we need to fix that

* Cleans up the configuration from testing

* Cleans up and adds a test Label and Input to Portal

* Resolves type issues, back to stable

* Resolves issues with styles not rendering -- confirms need theme support in Storybook

* Resolves issues with Storybook theming. Adds a theme selector

* Removes playwright tests and onClick handlers to simplify initial button story

* Refactors to use a src folder to split from dist

* Cleanup prior to initial PR

--- a/packages/1ui/tsconfig.json
+++ b/packages/1ui/tsconfig.json
@@ -8,8 +8,12 @@
     "target": "ESNext",
     "moduleResolution": "Node",
     "outDir": "./dist",
-    "declaration": true
+    "declaration": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["*"]
+    }
   },
-  "include": ["."],
+  "include": ["src"],
   "exclude": ["dist", "node_modules", "**/*.spec.ts"]
 }
