--- a/package.json
+++ b/package.json
@@ -14,19 +14,40 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nrwl/node": "^18.3.4",
     "@nx/eslint": "18.3.3",
     "@nx/eslint-plugin": "18.3.3",
+    "@nx/jest": "18.3.4",
+    "@nx/js": "18.3.4",
+    "@nx/node": "18.3.4",
     "@nx/remix": "18.3.3",
     "@nx/vite": "18.3.3",
     "@nx/web": "18.3.3",
+    "@swc-node/register": "~1.8.0",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.16.9",
     "@vitest/ui": "^1.3.1",
     "eslint": "~8.57.0",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "husky": "^9.0.11",
     "nx": "18.3.3",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "pretty-quick": "^4.0.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.4.2",
+    "verdaccio": "^5.0.4",
     "vite": "~5.0.0",
     "vitest": "^1.3.1"
+  },
+  "dependencies": {
+    "tslib": "^2.3.0"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
