ENG-1367 ENG-1368 Chore: Setup linting, fix lint errors on all packages (#9)
## Linear Ticket

https://linear.app/0xintuition/issue/ENG-1368/centralize-eslint-config

## Overview

This PR implements the following.

- Build all required packages before `dev` script is run
- Add eslint + lint scripts to all packages
- Standardize eslintrc across packages
- Fix all resulting linting errors that already existed in the code
- Fix tsconfigs so that all `build` scripts work
- Setup `@intuition/core` and `@intuition/1ui` base paths

In some areas, I have just ignore the eslint errors (like `any` type
errors) due to lack of context of the code. These can be fixed down the
road.

## Outcome

You should now be able to run the following three commands from the root

To build
`npx nx run-many --all --target=build`

To dev
`npx nx run-many --all --target=dev`

To lint
`npx nx run-many --all --target=lint`

## Installations Needed

Run a `pnpm install` at the root

--- a/packages/1ui/tsconfig.json
+++ b/packages/1ui/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "../../tsconfig.base.json", // Adjust the path as necessary
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": "./src", // Overrides the base to set the root directory for relative module resolution to the src folder
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
     "paths": {
       "@/*": ["*"]
     }
