ENG-1393 Chore: Finalize Pre Commit Hook Logic (#10)
- added central package.json commands to build, lint, and lint fix all
projects
- added lint:fix commands to all sub-packages
- updated pre commit hook to run build all and lint all on git commits
- added project.json and update eslint and ts configs for 1ui
- define project engine and projectManager in core package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettier": "prettier --write .",
     "prettier:silent": "prettier --write . --log-level=silent",
-    "pre-commit": "pretty-quick --verbose --staged",
+    "build": "nx run-many -t build",
+    "lint": "nx run-many -t lint",
+    "lint:fix": "nx run-many -t lint:fix",
+    "pre-commit": "pnpm lint && pretty-quick --verbose --staged && pnpm build",
     "prepare": "husky"
   },
   "keywords": [],
@@ -50,5 +53,9 @@
   },
   "nx": {
     "includedScripts": []
-  }
+  },
+  "engines": {
+    "pnpm": "9.0.6"
+  },
+  "packageManager": "pnpm@9.0.6+sha512.f6d863130973207cb7a336d6b439a242a26ac8068077df530d6a86069419853dc1ffe64029ec594a9c505a3a410d19643c870aba6776330f5cfddcf10a9c1617"
 }
