--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "1ui:component:create": "npx nx g @intuition-ts/automation-tools:ui-component",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettier": "prettier --write .",
     "prettier:silent": "prettier --write . --log-level=silent",
-    "build": "nx run-many -t build",
+    "build": "nx run-many -t build --exclude @intuition-ts/automation-tools",
     "lint": "nx run-many -t lint",
     "lint:fix": "nx run-many -t lint:fix",
     "pre-commit": "pnpm lint && pretty-quick --verbose --staged && pnpm build",
@@ -19,15 +20,19 @@
   "devDependencies": {
     "@nrwl/eslint-plugin-nx": "^18.3.4",
     "@nrwl/node": "^18.3.4",
+    "@nx/devkit": "18.3.4",
     "@nx/eslint": "18.3.3",
     "@nx/eslint-plugin": "18.3.3",
     "@nx/jest": "18.3.4",
     "@nx/js": "18.3.4",
     "@nx/node": "18.3.4",
+    "@nx/plugin": "^18.3.4",
+    "@nx/react": "^18.3.4",
     "@nx/remix": "18.3.3",
     "@nx/vite": "18.3.3",
     "@nx/web": "18.3.3",
     "@swc-node/register": "~1.8.0",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@types/jest": "^29.4.0",
@@ -36,6 +41,7 @@
     "eslint": "~8.57.0",
     "husky": "^9.0.11",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "nx": "18.3.3",
     "prettier": "^3.2.5",
