ENG-1388 ENG-1387 Feat: Set Up Storybook Structure & 1UI Repo Config (#16)
- configure storybook mdx support
- ignore storybook-static folder
- create root cmd to run 1ui storybook
- start implementing agreed upon component folder/file structure
- configure vite to process tsconfig paths
- update tsconfig paths to agreed upon naming convention

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "nx run-many -t lint",
     "lint:fix": "nx run-many -t lint:fix",
     "pre-commit": "pnpm lint && pretty-quick --verbose --staged && pnpm build",
+    "storybook:1ui": "nx ui @intuition-ts/1ui",
     "prepare": "husky"
   },
   "keywords": [],
@@ -61,7 +62,8 @@
     "includedScripts": []
   },
   "engines": {
-    "pnpm": "9.0.6"
+    "pnpm": "9.0.6",
+    "node": ">=19"
   },
   "packageManager": "pnpm@9.0.6+sha512.f6d863130973207cb7a336d6b439a242a26ac8068077df530d6a86069419853dc1ffe64029ec594a9c505a3a410d19643c870aba6776330f5cfddcf10a9c1617"
 }
