--- a/packages/1ui/package.json
+++ b/packages/1ui/package.json
@@ -18,8 +18,8 @@
     "./css": "./dist/style.css"
   },
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts --external react",
-    "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "lint:fix": "pnpm lint --fix",
     "typecheck": "tsc",
@@ -30,15 +30,15 @@
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "react": "^18.2.0",
+    "@storybook/manager-api": "^8.0.9",
     "@storybook/react": "^8.0.9",
     "@storybook/react-vite": "^8.0.9",
-    "vite": "~5.0.0",
-    "@storybook/manager-api": "^8.0.9",
     "@storybook/theming": "^8.0.9",
-    "tailwindcss": "^3.4.3",
     "autoprefixer": "^10.4.19",
-    "tsup": "^6.2.2"
+    "react": "^18.2.0",
+    "tailwindcss": "^3.4.3",
+    "tsup": "^6.2.2",
+    "vite": "~5.0.0"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
@@ -74,6 +74,6 @@
     "tailwindcss": "^3.4.3",
     "tsup": "^6.2.2",
     "typescript": "^5.1.6",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
