ENG-0000 Fix: tsconfig absolute import (#25)
## Affected Packages

- [ ] Portal
- [X] 1UI
- [ ] Core

## Overview

Absolute import was configured wrong. This was making packages starting
with `@` to look at the `src` directory instead of the node_module

Also changes `components/ui` to just `components` in a few places that
were missed

## Declaration

- [X] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,7 +13,7 @@
     "skipLibCheck": true,
     "target": "ESNext",
     "paths": {
-      "@*": ["src/*"],
+      "@/*": ["src/*"],
       "@intuition-ts/1ui": ["packages/1ui/src/index.ts"],
       "@intuition-ts/automation-tools": ["tools/src/index.ts"],
       "@intuition-ts/core": ["packages/core/src/index.ts"]
