--- a/packages/1ui/package.json
+++ b/packages/1ui/package.json
@@ -8,7 +8,10 @@
     "lint:fix": "pnpm lint --fix",
     "typecheck": "tsc",
     "ui": "storybook dev -p 6006",
-    "ui:build": "storybook build"
+    "ui:build": "storybook build",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:update": "vitest -u"
   },
   "keywords": [],
   "author": "",
@@ -50,9 +53,12 @@
     "@storybook/react-vite": "^8.0.9",
     "@storybook/test": "^8.0.9",
     "@storybook/theming": "^8.0.9",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^15.0.7",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.20",
     "autoprefixer": "^10.4.19",
+    "jsdom": "~22.1.0",
     "postcss": "^8.4.38",
     "storybook": "^8.0.9",
     "tailwindcss": "^3.4.3",
