ENG-0000 Chore: Lint and test changes across the board (#30)
## Affected Packages

- [ ] Portal
- [X] 1UI
- [X] protocol
- [X] tools

## Overview

- Sets up tests to run for `automation-tools`
- Moves over build, lint, test scripts for `protocol` to `project.json`
- Moves over lint, test scripts for `protocol` to `project.json`
- Caches all test runs
- Adds project specific commands to package.json

## Declaration

- [X] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
   "main": "index.js",
   "scripts": {
     "1ui:component:create": "npx nx g @intuition-ts/automation-tools:ui-component",
-    "test": "nx run @intuition-ts/1ui:test",
-    "prettier": "prettier --write .",
-    "prettier:silent": "prettier --write . --log-level=silent",
+    "1ui:build": "nx build @intuition-ts/1ui",
+    "1ui:lint": "nx lint @intuition-ts/1ui",
+    "1ui:test": "nx test @intuition-ts/1ui",
+    "portal:build": "nx build @intuition-ts/portal",
+    "portal:lint": "nx lint @intuition-ts/portal",
+    "portal:test": "nx test @intuition-ts/portal",
+    "protocol:build": "nx build @intuition-ts/protocol",
+    "protocol:lint": "nx lint @intuition-ts/protocol",
+    "protocol:test": "nx test @intuition-ts/protocol",
     "build": "nx run-many -t build",
     "lint": "nx run-many -t lint",
     "lint:fix": "nx run-many -t lint:fix",
-    "pre-commit": "pnpm lint && pretty-quick --verbose --staged && pnpm test && pnpm build",
-    "storybook:1ui": "nx run @intuition-ts/1ui:storybook",
+    "test": "nx run-many -t test",
+    "storybook": "nx run @intuition-ts/1ui:storybook",
+    "prettier": "prettier --write .",
+    "prettier:silent": "prettier --write . --log-level=silent",
+    "pre-commit": "pnpm lint && pretty-quick --verbose --staged",
     "prepare": "husky"
   },
   "keywords": [],
