ENG-1544 Feat: Add the API and SDK packages (#39)
## Affected Packages

- [ ] portal
- [ ] 1ui
- [ ] protocol
- [ ] tools

## Overview

- Updates naming convention for all packages
- Adds api and sdk packages
- Sets up sample tests in each
- Updates READMEs


## Declaration

- [ ] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@0xintuition/protocol",
+  "name": "@0xintuition/api",
   "version": "0.0.1",
   "main": "dist/index.js",
   "exports": {
@@ -7,8 +7,7 @@
   },
   "types": "dist/index.d.ts",
   "scripts": {
-    "lint:fix": "pnpm lint --fix",
-    "generate": "node ./scripts/generate.js"
+    "lint:fix": "pnpm lint --fix"
   },
   "files": [
     "dist/**/*",
@@ -19,11 +18,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {
-    "viem": "^2.9.29"
-  },
   "devDependencies": {
-    "@viem/anvil": "^0.0.10",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
     "vitest": "^1.3.1"
