--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -27,7 +27,6 @@
     "react-dom": "^18.2.0",
     "remix-auth": "^3.6.0",
     "remix-forms": "^2.3.0",
-    "remix-utils": "^7.6.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "viem": "^2.9.26",
@@ -52,6 +51,7 @@
     "remix-flat-routes": "^0.6.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
+    "vite-env-only": "^2.3.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
   "engines": {
