ENG-1497 Feat: Codegen implementation in api package (#33)
## Affected Packages

- [x] portal
- [ ] 1ui
- [ ] protocol
- [x] api

## Overview

This PR setups a library under `packages/api/api-client` that contains
the Typescript client to interface with the backend. There are two
**generated files** that are of particular importance

1. `services.gen.ts` - All API calls to the backend wrapped in functions
and using `axios`
2. `types.gen.ts` - TypeScript interfaces to model data from the backend

These can be imported into any `app` or `package` in the mono-repo in
order to better facilitate seamless interfacing with the backend.


## Testing

Run `pnpm install` to install latest dependencies.

For testing, I created a `test` route which you can hit. It has the
following loader. You can go to `localhost:3000/test` to access it and
check your server logs.

```export async function loader({ request }: LoaderFunctionArgs) {
  OpenAPI.BASE = 'https://dev.api.intuition.systems'
  const { accessToken } = await requireAuthedUser(request)
  const headers = getAuthHeaders(accessToken !== null ? accessToken : '')
  OpenAPI.HEADERS = headers as Record<string, string>

  const test = await IdentitiesService.getIdentities({
    paging: {
      page: 1,
      limit: 10,
      offset: 0,
    },
    sort: {
      sortBy: 'IdentityId',
      direction: 'asc',
    },
  })

  console.log('test api call response', test)

  return json({
    hello: 'world',
  })
}
```

You should see the following logs

<img width="658" alt="image"
src="https://github.com/0xIntuition/intuition-ts/assets/37151383/d576de03-f27c-4e1b-9188-4448ee820dad">

## Declaration

- [x] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "1ui:build": "nx build @0xintuition/1ui",
     "1ui:lint": "nx lint @0xintuition/1ui",
     "1ui:test": "nx test @0xintuition/1ui --reporter=verbose",
+    "portal:dev": "nx dev @0xintuition/portal",
     "api:build": "nx build @0xintuition/api",
     "api:lint": "nx lint @0xintuition/api",
-    "api:test": "nx test @0xintuition/api --reporter=verbose",
     "portal:build": "nx build @0xintuition/portal",
     "portal:lint": "nx lint @0xintuition/portal",
     "portal:test": "nx test @0xintuition/portal --reporter=verbose",
@@ -28,12 +28,14 @@
     "prettier": "prettier --write .",
     "prettier:silent": "prettier --write . --log-level=silent",
     "pre-commit": "pnpm lint && pretty-quick --verbose --staged",
-    "prepare": "husky"
+    "prepare": "husky",
+    "codegen": "nx codegen @0xintuition/api"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@hey-api/openapi-ts": "^0.44.0",
     "@nrwl/eslint-plugin-nx": "^18.3.4",
     "@nrwl/node": "^18.3.4",
     "@nx/devkit": "18.3.4",
