--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@0xintuition/api",
   "version": "0.0.1",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./src/index.ts"
   },
-  "types": "dist/index.d.ts",
+  "types": "src/index.d.ts",
   "scripts": {
-    "lint:fix": "pnpm lint --fix"
+    "lint:fix": "pnpm lint --fix",
+    "codegen": "openapi-ts"
   },
   "files": [
     "dist/**/*",
@@ -19,6 +20,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
     "vitest": "^1.3.1"
