--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -14,19 +14,22 @@
     "@0xintuition/1ui": "workspace:^",
     "@0xintuition/api": "workspace:^",
     "@privy-io/react-auth": "^1.60.7",
+    "@privy-io/server-auth": "^1.7.3",
     "@privy-io/wagmi": "^0.2.3",
-    "@remix-run/node": "^2.9.0",
-    "@remix-run/react": "^2.9.0",
-    "@remix-run/serve": "^2.9.0",
+    "@remix-run/node": "^2.9.2",
+    "@remix-run/react": "^2.9.2",
+    "@remix-run/serve": "^2.9.2",
     "@tanstack/react-query": "^5.32.0",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "did-session": "^3.1.0",
     "domain-functions": "^2.6.0",
     "isbot": "^4.1.0",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.6.0",
+    "remix-create-express-app": "^0.3.7",
     "remix-forms": "^2.3.0",
     "remix-utils": "^7.6.0",
     "tailwind-merge": "^2.3.0",
@@ -36,8 +39,10 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.9.0",
+    "@remix-run/dev": "^2.9.2",
     "@types/cookie": "^0.6.0",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -50,6 +55,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "remix-express-dev-server": "^0.2.5",
     "remix-flat-routes": "^0.6.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
