--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "sdk:test": "nx test @0xintuition/sdk --reporter=verbose",
     "build": "nx run-many -t build",
     "lint": "nx run-many -t lint",
-    "lint:fix": "nx run-many -t lint:fix",
+    "lint:fix": "nx run-many -t lint --fix",
     "test": "nx run-many -t test",
     "storybook": "nx run @0xintuition/1ui:storybook",
     "prettier": "prettier --write .",
@@ -36,6 +36,7 @@
   "license": "ISC",
   "devDependencies": {
     "@hey-api/openapi-ts": "^0.44.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@nrwl/eslint-plugin-nx": "^18.3.4",
     "@nrwl/node": "^18.3.4",
     "@nx/devkit": "18.3.4",
@@ -70,7 +71,9 @@
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-playwright": "^0.15.3",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
