ENG-1570 ENG-1571 Feat: Testing setup publishing and release steps for 1ui (#56)
## Affected Packages

Apps

- [ ] portal

Packages

- [x] 1ui
- [ ] api
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

This is the overall workflow

1. Make changes to local packages during development
2. Test out changes by publishing to local registries via Verdaccio

```bash
npx nx local-registry # start the local verdaccio registry
pnpm run publish-packages:local # publish packages to the local registry
```

3. Once Pr is approved and merged to main, _affected packages_ will be
deployed to `@next` version in their respective npm registries
4. Once we are ready to make a release via the Github UI, Nx will use
[conventional
commits](https://www.conventionalcommits.org/en/v1.0.0/#summary) to
update the version, publish to npm, and create a Github release. It will
also create the appropriate changelog for these

## Screen Captures

If applicable, add screenshots or screen captures of your changes.

## Declaration

- [x] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/nx.json
+++ b/nx.json
@@ -23,6 +23,9 @@
     "typecheck": {
       "cache": true
     },
+    "publish-package": {
+      "dependsOn": ["build", "test"]
+    },
     "@nx/js:tsc": {
       "cache": true,
       "dependsOn": ["^build"],
@@ -36,7 +39,18 @@
   },
   "release": {
     "version": {
+      "projects": [
+        "*",
+        "!@0xintuition/portal",
+        "!@0xintuition/automation-tools"
+      ],
+      "conventionalCommits": true,
       "preVersionCommand": "pnpm dlx nx run-many -t build"
+    },
+    "changelog": {
+      "projectChangelogs": {
+        "createRelease": "github"
+      }
     }
   },
   "plugins": [
