--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@0xintuition/intuition-ts",
-  "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "1ui:component:create": "npx nx g @0xintuition/automation-tools:ui-component",
     "1ui:build": "nx build @0xintuition/1ui",
@@ -25,6 +24,7 @@
     "lint:fix": "nx run-many -t lint --fix",
     "test": "nx run-many -t test",
     "storybook": "nx run @0xintuition/1ui:storybook",
+    "publish-packages:local": "nx run-many -t publish-package --registry=http://localhost:4873",
     "prettier": "prettier --write .",
     "prettier:silent": "prettier --write . --log-level=silent",
     "pre-commit": "pnpm lint && pretty-quick --verbose --staged",
