--- a/packages/1ui/package.json
+++ b/packages/1ui/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@0xintuition/1ui",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
     "dev": "tsup --watch",
-    "lint:fix": "pnpm lint --fix"
+    "lint:fix": "pnpm lint --fix",
+    "publish-package": "pnpm publish --tag next --no-git-checks"
   },
   "keywords": [],
   "author": "",
