--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@0xintuition/api",
-  "version": "0.0.1",
-  "main": "src/index.ts",
+  "version": "0.1.0",
+  "main": "dist/index.ts",
   "exports": {
     ".": "./src/index.ts"
   },
