--- a/.github/workflows/publish-staging.yml
+++ b/.github/workflows/publish-staging.yml
@@ -40,7 +40,7 @@ jobs:
         shell: bash
 
       - name: Run Affected Builds
-        run: pnpm nx affected -t build --base=origin/main
+        run: npx nx run-many -t build
 
       - name: Publish affected projects with @next tag
         run: npx nx release publish --tag next --dry-run
