--- a/packages/sdk/project.json
+++ b/packages/sdk/project.json
@@ -38,7 +38,7 @@
     },
     "nx-release-publish": {
       "options": {
-        "packageRoot": "dist/{projectRoot}"
+        "packageRoot": "dist/packages/{projectRoot}"
       }
     }
   }
