--- a/nx.json
+++ b/nx.json
@@ -21,6 +21,7 @@
       "cache": true
     },
     "nx-release-publish": {
+      "dependsOn": ["^build"],
       "options": {
         "packageRoot": "dist/packages/{projectName}"
       }
