fix(1ui): workspace root remove

--- a/packages/1ui/project.json
+++ b/packages/1ui/project.json
@@ -60,6 +60,12 @@
           "quiet": true
         }
       }
+    },
+    "nx-release-publish": {
+      "dependsOn": ["build"],
+      "options": {
+        "packageRoot": "dist/{projectRoot}"
+      }
     }
   }
 }
