chore: update nx.json (#64)
## Affected Packages

Apps

- [ ] portal

Packages

- [x] 1ui
- [x] api
- [x] protocol
- [x] sdk

Tools

- [ ] tools

## Overview

- Updates nx.json to setup releases
- Sets up individual project changelogs

## Declaration

- [x] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/nx.json
+++ b/nx.json
@@ -35,19 +35,25 @@
     }
   },
   "release": {
+    "projects": [
+      "*",
+      "!@0xintuition/intuition-ts",
+      "!@0xintuition/portal",
+      "!@0xintuition/automation-tools"
+    ],
     "version": {
-      "projects": [
-        "*",
-        "!@0xintuition/portal",
-        "!@0xintuition/automation-tools"
-      ],
       "conventionalCommits": true,
       "preVersionCommand": "npx nx run-many -t build"
     },
     "changelog": {
-      "projectChangelogs": {
-        "createRelease": "github"
-      }
+      "workspaceChangelog": {
+        "createRelease": "github",
+        "git": {
+          "commit": true,
+          "tag": true
+        }
+      },
+      "projectChangelogs": true
     }
   },
   "plugins": [
