ENG-0000 chore: upgrade to Nx 19 (#67)
## Affected Packages

Apps

- [ ] portal

Packages

- [ ] 1ui
- [ ] api
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

- As part of upgrading to 19, had to change all eslintrc.json files to
eslintrc.cjs files
- Generated initial individual changelogs for all packages


## Declaration

- [ ] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/nx.json
+++ b/nx.json
@@ -35,6 +35,7 @@
     }
   },
   "release": {
+    "projectsRelationship": "independent",
     "projects": [
       "*",
       "!@0xintuition/intuition-ts",
@@ -43,15 +44,11 @@
     ],
     "version": {
       "conventionalCommits": true,
-      "preVersionCommand": "npx nx run-many -t build"
+      "preVersionCommand": "pnpm dlx nx run-many -t build "
     },
     "changelog": {
       "workspaceChangelog": {
-        "createRelease": "github",
-        "git": {
-          "commit": true,
-          "tag": true
-        }
+        "createRelease": "github"
       },
       "projectChangelogs": true
     }
