--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
         shell: bash
 
       - name: Make releases
-        run: npx nx release --skip-publish
+        run: npx nx release --skip-publish --first-release
         shell: bash
         env:
           CI: true
