ENG-0000 chore: setup storybook hosting & update ci action (#70)
- use github pages to host storybook
- add build and deploy steps to CI github action
- update command story description in storybook

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,10 +32,20 @@ jobs:
             ${{ runner.os }}-pnpm-
       - run: pnpm install --frozen-lockfile
       - uses: nrwl/nx-set-shas@v3
-        if: ${{ github.event_name == 'pull_request' }}
       - name: Run Affected Lint
-        run: pnpm nx affected -t lint --base=origin/main
+        if: github.event_name == 'pull_request'
+        run: pnpm nx affected -t lint --base=origin/main~1 --head=origin/main
       - name: Run Affected Tests
-        run: pnpm nx affected -t test --base=origin/main
+        if: github.event_name == 'pull_request'
+        run: pnpm nx affected -t test --base=origin/main~1 --head=origin/main
       - name: Run Affected Builds
-        run: pnpm nx affected -t build --base=origin/main
+        if: github.event_name == 'pull_request'
+        run: pnpm nx affected -t build --base=origin/main~1 --head=origin/main
+      - name: Build 1ui Storybook
+        if: github.ref == 'refs/heads/main'
+        run: pnpm 1ui:build-storybook
+      - name: Deploy 1ui Storybook
+        if: github.ref == 'refs/heads/main'
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: dist/storybook/1ui
