--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "@0xintuition/intuition-ts",
   "description": "",
   "private": true,
+  "homepage": "http://0xIntuition.github.io/intuition-ts",
   "scripts": {
     "1ui:component:create": "npx nx g @0xintuition/automation-tools:ui-component",
     "1ui:build": "nx build @0xintuition/1ui",
+    "1ui:build-storybook": "nx build-storybook @0xintuition/1ui",
     "1ui:lint": "nx lint @0xintuition/1ui",
     "1ui:test": "nx test @0xintuition/1ui --reporter=verbose",
     "portal:dev": "nx dev @0xintuition/portal",
