ENG-0000 chore: Setup versions + update codegen (#69)
## Affected Packages

Apps

- [ ] portal

Packages

- [ ] 1ui
- [ ] api
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

Overview of the changes in the PR.

## Screen Captures

If applicable, add screenshots or screen captures of your changes.

## Declaration

- [ ] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/nx.json
+++ b/nx.json
@@ -39,18 +39,52 @@
     "projects": [
       "*",
       "!@0xintuition/intuition-ts",
-      "!@0xintuition/portal",
       "!@0xintuition/automation-tools"
     ],
     "version": {
-      "conventionalCommits": true,
-      "preVersionCommand": "pnpm dlx nx run-many -t build "
+      "preVersionCommand": "pnpm dlx nx run-many -t build",
+      "conventionalCommits": true
     },
     "changelog": {
-      "workspaceChangelog": {
-        "createRelease": "github"
-      },
       "projectChangelogs": true
+    },
+    "conventionalCommits": {
+      "types": {
+        "feat": {
+          "semverBump": "minor",
+          "changelog": {
+            "title": "Features"
+          }
+        },
+        "deps": {
+          "semverBump": "minor",
+          "changelog": {
+            "title": "Dependency Updates"
+          }
+        },
+        "fix": {
+          "semverBump": "patch",
+          "changelog": {
+            "title": "Fixes"
+          }
+        },
+        "docs": {
+          "semverBump": "patch",
+          "changelog": {
+            "title": "Documentation Changes"
+          }
+        },
+        "chore": {
+          "semverBump": "patch",
+          "changelog": false
+        },
+        "perf": {
+          "semverBump": "none",
+          "changelog": {
+            "title": "Performance Improvements"
+          }
+        }
+      }
     }
   },
   "plugins": [
