--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "1ui:lint": "nx lint @0xintuition/1ui",
     "1ui:test": "nx test @0xintuition/1ui --reporter=verbose",
     "portal:dev": "nx dev @0xintuition/portal",
+    "portal:start": "nx start @0xintuition/portal",
     "api:build": "nx build @0xintuition/api",
     "api:lint": "nx lint @0xintuition/api",
     "portal:build": "nx build @0xintuition/portal",
