chore: update release tag pattern

--- a/nx.json
+++ b/nx.json
@@ -85,7 +85,8 @@
           }
         }
       }
-    }
+    },
+    "releaseTagPattern": "release/{projectName}/{version}"
   },
   "plugins": [
     {
