--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@0xintuition/protocol",
   "version": "0.1.0",
+  "private": true,
   "main": "dist/index.js",
   "exports": {
     ".": "./dist/index.js"
