--- a/packages/1ui/package.json
+++ b/packages/1ui/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@0xintuition/1ui",
   "version": "0.1.0",
+  "private": true,
   "description": "",
   "main": "src/index.ts",
   "scripts": {
