--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,6 +2,7 @@
   "name": "@0xintuition/api",
   "version": "0.1.0",
   "private": true,
+  "description": "API",
   "main": "dist/index.ts",
   "exports": {
     ".": "./src/index.ts"
