--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -2,6 +2,7 @@
   "name": "@0xintuition/protocol",
   "version": "0.1.0",
   "private": true,
+  "description": "Protocol",
   "main": "dist/index.js",
   "exports": {
     ".": "./dist/index.js"
