--- a/packages/1ui/package.json
+++ b/packages/1ui/package.json
@@ -2,7 +2,7 @@
   "name": "@0xintuition/1ui",
   "version": "0.1.0",
   "private": true,
-  "description": "",
+  "description": "Design system",
   "main": "src/index.ts",
   "scripts": {
     "dev": "tsup --watch",
