--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@0xintuition/sdk",
   "version": "0.1.0",
-  "private": true,
   "description": "Backend SDK",
   "main": "dist/index.js",
   "exports": {
@@ -17,8 +16,10 @@
     "README.md",
     "LICENSE"
   ],
-  "publishConfig": {
-    "access": "public"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/0xIntuition/intuition-ts",
+    "directory": "packages/sdk"
   },
   "dependencies": {
     "@0xintuition/api": "workspace:^"
