--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@0xintuition/portal",
   "version": "0.1.0",
-  "private": true,
   "description": "Portal",
   "sideEffects": false,
   "type": "module",
@@ -10,6 +9,11 @@
     "dev": "remix vite:dev",
     "start": "remix-serve ./build/server/index.js",
     "lint:fix": "pnpm lint --fix"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/0xIntuition/intuition-ts",
+    "directory": "packages/portal"
   },
   "dependencies": {
     "@0xintuition/1ui": "workspace:^",
