--- a/packages/1ui/package.json
+++ b/packages/1ui/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@0xintuition/1ui",
   "version": "0.1.0",
-  "private": true,
   "description": "Design system",
   "main": "src/index.ts",
   "scripts": {
@@ -12,6 +11,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/0xIntuition/intuition-ts",
+    "directory": "packages/1ui"
+  },
   "peerDependencies": {
     "@storybook/manager-api": "^8.0.9",
     "@storybook/react": "^8.0.9",
