--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@0xintuition/protocol",
   "version": "0.1.0",
-  "private": true,
   "description": "Protocol",
   "main": "dist/index.js",
   "exports": {
@@ -18,8 +17,10 @@
     "README.md",
     "LICENSE"
   ],
-  "publishConfig": {
-    "access": "public"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/0xIntuition/intuition-ts",
+    "directory": "packages/protocol"
   },
   "dependencies": {
     "viem": "^2.9.29"
