--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/0xIntuition/intuition-ts",
-    "directory": "packages/portal"
+    "directory": "apps/portal"
   },
   "dependencies": {
     "@0xintuition/1ui": "workspace:^",
