--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,21 +6,28 @@ on:
   pull_request:
 
 jobs:
-  build-and-test:
+  build-test-release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 20
-      - uses: pnpm/action-setup@v2
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
           version: 9.0.6
+
       # Foundry setup for protocol
-      - name: Set up foundry
+      - name: Setup foundry
         uses: foundry-rs/foundry-toolchain@v1
+
       - name: Cache pnpm store
         uses: actions/cache@v3
         with:
@@ -31,21 +38,36 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-
       - run: pnpm install --frozen-lockfile
-      - uses: nrwl/nx-set-shas@v3
+      - name: Set Shas
+        uses: nrwl/nx-set-shas@v3
+
       - name: Run Affected Lint
         if: github.event_name == 'pull_request'
         run: pnpm nx affected -t lint --base=origin/main~1 --head=origin/main
+
       - name: Run Affected Tests
         if: github.event_name == 'pull_request'
         run: pnpm nx affected -t test --base=origin/main~1 --head=origin/main
+
       - name: Run Affected Builds
         if: github.event_name == 'pull_request'
         run: pnpm nx affected -t build --base=origin/main~1 --head=origin/main
+
       - name: Build 1ui Storybook
         if: github.ref == 'refs/heads/main'
         run: pnpm 1ui:build-storybook
+
       - name: Deploy 1ui Storybook
         if: github.ref == 'refs/heads/main'
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: build/storybook/1ui
+
+      - name: Bump package versions
+        run: npx nx release version --git-commit --dry-run --verbose
+
+      - name: Publish all packages to npm
+        run: npx nx release publish --dry-run --first-release --verbose
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          NPM_CONFIG_PROVENANCE: true
