--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -16,8 +16,8 @@
     "directory": "apps/portal"
   },
   "dependencies": {
-    "@0xintuition/1ui": "workspace:^",
-    "@0xintuition/api": "workspace:^",
+    "@0xintuition/1ui": "0.1.0",
+    "@0xintuition/api": "0.1.1",
     "@privy-io/react-auth": "^1.60.7",
     "@privy-io/server-auth": "^1.7.3",
     "@privy-io/wagmi": "^0.2.3",
