--- a/packages/1ui/tsconfig.json
+++ b/packages/1ui/tsconfig.json
@@ -6,8 +6,9 @@
     "paths": {
       "@*": ["*"],
       "@components": ["components/index"],
-      "@styles": ["styles/index"]
-    }
+      "@ui-styles": ["styles/index"]
+    },
+    "outDir": "../../dist/packages/1ui",
   },
   "include": ["src"]
 }
