--- a/packages/1ui/package.json
+++ b/packages/1ui/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@0xintuition/1ui",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Design system",
   "main": "src/index.ts",
   "scripts": {
     "dev": "tsup --watch",
+    "build": "tsc --project ./tsconfig.lib.json && tsc-alias",
     "lint:fix": "pnpm lint --fix",
     "publish-package": "pnpm publish --tag next --no-git-checks"
   },
@@ -17,15 +18,7 @@
     "directory": "packages/1ui"
   },
   "peerDependencies": {
-    "@storybook/manager-api": "^8.0.9",
-    "@storybook/react": "^8.0.9",
-    "@storybook/react-vite": "^8.0.9",
-    "@storybook/theming": "^8.0.9",
-    "autoprefixer": "^10.4.19",
-    "react": "^18.2.0",
-    "tailwindcss": "^3.4.3",
-    "tsup": "^6.2.2",
-    "vite": "~5.0.0"
+    "react": "^18.2.0"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -50,6 +43,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-interactions": "^8.0.9",
     "@storybook/addon-links": "^8.0.9",
@@ -65,13 +59,14 @@
     "@testing-library/react": "^15.0.7",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.20",
-    "autoprefixer": "^10.4.19",
     "jsdom": "~22.1.0",
     "postcss": "^8.4.38",
     "storybook": "^8.0.9",
     "tailwindcss": "^3.4.3",
+    "tsc-alias": "^1.8.10",
     "tsup": "^6.2.2",
     "typescript": "^5.1.6",
+    "vite": "~5.0.0",
     "vite-tsconfig-paths": "^4.3.2"
   }
 }
