--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prettier:silent": "prettier --write . --log-level=silent",
     "pre-commit": "pnpm lint && pretty-quick --verbose --staged",
     "prepare": "husky",
-    "codegen": "nx codegen @0xintuition/api"
+    "codegen": "nx codegen @0xintuition/api",
+    "postinstall": "pnpm install --frozen-lockfile"
   },
   "keywords": [],
   "author": "",
