--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@0xintuition/sdk",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Backend SDK",
   "main": "dist/index.js",
   "exports": {
@@ -22,7 +22,7 @@
     "directory": "packages/sdk"
   },
   "dependencies": {
-    "@0xintuition/api": "workspace:^"
+    "@0xintuition/api": "0.1.2"
   },
   "devDependencies": {
     "typescript": "^5.4.5",
