chore: remove postinstall

--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "prettier:silent": "prettier --write . --log-level=silent",
     "pre-commit": "pnpm lint && pretty-quick --verbose --staged",
     "prepare": "husky",
-    "codegen": "nx codegen @0xintuition/api",
-    "postinstall": "pnpm install --frozen-lockfile"
+    "codegen": "nx codegen @0xintuition/api"
   },
   "keywords": [],
   "author": "",
