--- a/packages/1ui/package.json
+++ b/packages/1ui/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
@@ -42,7 +43,6 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-interactions": "^8.0.9",
     "@storybook/addon-links": "^8.0.9",
@@ -58,11 +58,11 @@
     "@testing-library/react": "^15.0.7",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.20",
+    "autoprefixer": "^10.4.19",
     "jsdom": "~22.1.0",
     "postcss": "^8.4.38",
     "storybook": "^8.0.9",
     "tailwindcss": "^3.4.3",
-    "tsc-alias": "^1.8.10",
     "tsup": "^6.2.2",
     "typescript": "^5.1.6",
     "vite": "~5.0.0",
