--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -17,6 +17,10 @@
   },
   "dependencies": {
     "@0xintuition/1ui": "workspace:^",
+    "@conform-to/react": "^1.1.3",
+    "@conform-to/zod": "^1.1.3",
+    "@epic-web/remember": "^1.0.2",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@0xintuition/api": "workspace:^",
     "@privy-io/react-auth": "^1.60.7",
     "@privy-io/server-auth": "^1.7.3",
@@ -30,6 +34,7 @@
     "did-session": "^3.1.0",
     "domain-functions": "^2.6.0",
     "isbot": "^4.1.0",
+    "lucide-react": "^0.376.0",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +42,7 @@
     "remix-create-express-app": "^0.3.7",
     "remix-forms": "^2.3.0",
     "remix-utils": "^7.6.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "viem": "^2.9.26",
