--- a/packages/1ui/package.json
+++ b/packages/1ui/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@0xintuition/1ui",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Design system",
-  "main": "src/index.ts",
+  "main": "src/index.js",
   "scripts": {
     "dev": "tsup --watch",
     "lint:fix": "pnpm lint --fix",
