--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -29,10 +29,13 @@
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@tanstack/react-query": "^5.32.0",
+    "@vidstack/react": "^1.10.9",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "did-session": "^3.1.0",
     "domain-functions": "^2.6.0",
+    "embla-carousel": "^8.1.3",
+    "embla-carousel-react": "^8.1.3",
     "isbot": "^4.1.0",
     "lucide-react": "^0.376.0",
     "morgan": "^1.10.0",
