--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@0xintuition/portal",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Portal",
   "sideEffects": false,
   "type": "module",
@@ -16,8 +16,8 @@
     "directory": "apps/portal"
   },
   "dependencies": {
-    "@0xintuition/1ui": "workspace:^",
-    "@0xintuition/api": "workspace:^",
+    "@0xintuition/1ui": "0.3.0",
+    "@0xintuition/api": "0.2.0",
     "@conform-to/react": "^1.1.3",
     "@conform-to/zod": "^1.1.3",
     "@epic-web/remember": "^1.0.2",
