--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -16,8 +16,8 @@
     "directory": "apps/portal"
   },
   "dependencies": {
-    "@0xintuition/1ui": "0.3.0",
-    "@0xintuition/api": "0.2.0",
+    "@0xintuition/1ui": "workspace:^",
+    "@0xintuition/api": "workspace:^",
     "@conform-to/react": "^1.1.3",
     "@conform-to/zod": "^1.1.3",
     "@epic-web/remember": "^1.0.2",
