--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -22,7 +22,7 @@
     "directory": "packages/sdk"
   },
   "dependencies": {
-    "@0xintuition/api": "0.2.0"
+    "@0xintuition/api": "workspace:^"
   },
   "devDependencies": {
     "typescript": "^5.4.5",
