--- a/nx.json
+++ b/nx.json
@@ -43,10 +43,7 @@
     ],
     "version": {
       "preVersionCommand": "pnpm dlx nx run-many -t build",
-      "conventionalCommits": true,
-      "generatorOptions": {
-        "skipLockFileUpdate": true
-      }
+      "conventionalCommits": true
     },
     "changelog": {
       "projectChangelogs": true
