--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "sdk:lint": "nx lint @0xintuition/sdk",
     "sdk:test": "nx test @0xintuition/sdk --reporter=verbose",
     "build": "nx run-many -t build",
-    "lint": "nx run-many -t lint",
-    "lint:fix": "nx run-many -t lint --fix",
+    "lint": "nx run-many -t lint --verbose",
+    "lint:fix": "nx run-many -t lint --verbose --fix",
     "test": "nx run-many -t test",
     "storybook": "nx run @0xintuition/1ui:storybook",
     "publish": "nx run-many -t nx-release-publish",
@@ -72,6 +72,8 @@
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
@@ -79,6 +81,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
     "husky": "^9.0.11",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
