--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -34,6 +34,7 @@
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
+    "date-fns": "^3.6.0",
     "did-session": "^3.1.0",
     "domain-functions": "^2.6.0",
     "embla-carousel": "^8.1.3",
