ENG-0000 fix(portal,1ui): resolve all remaining typescript and build issues (#466)
## Affected Packages

Apps

- [x] portal

Packages

- [x] 1ui
- [ ] api
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

- Stop tsc from checking types of consumed packages
- Fix remaining type errors in portal
- Make 1ui emit types and the have it be a `composite` library so that
the types can be included as references in portal

Source:
https://github.com/microsoft/TypeScript/issues/38538#issuecomment-1731412723

## Screen Captures

If applicable, add screenshots or screen captures of your changes.

## Declaration

- [x] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/apps/portal/tsconfig.json
+++ b/apps/portal/tsconfig.json
@@ -22,5 +22,10 @@
     "outDir": "./build"
   },
   "include": ["**/*.ts", "**/*.tsx", "tailwind.config.js"],
-  "exclude": ["node_modules", "dist", "**/packages/**/*"]
+  "exclude": ["node_modules", "build", "./.content-collections"],
+  "references": [
+    {
+      "path": "../../packages/1ui"
+    }
+  ]
 }
